--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
+        "midtrans/midtrans-php": "^2.5",
         "milon/barcode": "^8.0",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
@@ -48,7 +49,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Http/Helpers/helpers.php"
+            "app/Http/Helpers/helpers.php",
+            "app/Http/Helpers/MidtransApiHelpers.php"
         ]
     },
     "autoload-dev": {
