--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "barryvdh/laravel-dompdf": "2.2",
+        "barryvdh/laravel-dompdf": "^2.2",
         "doctrine/dbal": "^3.0",
-        "dompdf/dompdf": "2.0.7",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
